--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body{
   height: 100vh;
   padding: 0;
   margin: 0;
-  color:#c8d6e5;
-  background: #8E0E00;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #1b2530, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #1b2530, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color:#8b8788;
+  background: #8E0E00;
+  background: -webkit-linear-gradient(to right, #1b2530, #8E0E00);
+  background: linear-gradient(to right, #1b2530, #8E0E00);
   display: flex;
   flex-direction: column;
 }
@@ -22,7 +22,7 @@ body{
 .container:hover{
   transition: ease-in-out 0.2s 0s;
   box-shadow: 0 0 10px 10px #2b2929;
-  border-bottom: 10px solid #261c1e;
+  border-bottom: 10px solid #830c24;
   transform: translateY(-10px);
 }
 h1{
