--- a/snake/style.css
+++ b/snake/style.css
@@ -41,3 +41,14 @@ button:hover {
 button:active {
     background: #1F6E35;
 }
+span{
+    margin-top: 15px;
+}
+kbd{
+    background: #36332F;
+    padding: 5px;
+    margin-inline: .25ch;
+    border: #36332F 2px;
+    border-radius: 10%;
+    box-shadow: .5ch .5ch 1ch .1ch black;
+}
