--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ menu svg{
 .home > img {
     height: 10ch;
     margin-right: 1rem;
+    aspect-ratio: 1/1;
 }
 .home > div > h1 {
     display: inline-block;
@@ -227,7 +228,7 @@ menu svg{
     }
 }
 
-@media (pointer:none), (pointer:coarse) {
+@media  (width < 924px ), (pointer:none), (pointer:coarse) {
     menu {
         left: 0;
         right: 0;
