--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,9 @@ nav a:active {
     grid-template-rows: 1fr;
     grid-template-columns: repeat(6,1fr);
     gap: 20px;
-
     overflow-x: scroll;
+
+    place-items: center;
 }
 #languages p {
     display: flex;
@@ -169,7 +170,12 @@ nav a:active {
     align-items: end;
 }
 #languages-wrapper div {
-    display: grid;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
 
@@ -186,10 +192,6 @@ nav a:active {
 #customize input[type="range"]{
     width: 15rem;
 }
-
-
-
-
 
 
 
