Nop again, but lasy

--- a/style.css
+++ b/style.css
@@ -199,6 +199,10 @@ a:active::before {
     .link section:before {
         display: none;
     }
+
+    h1{
+        font-size: 4.5rem;
+    }
     
     h2{
         font-size: 3rem;
